--- a/pom.xml
+++ b/pom.xml
@@ -31,17 +31,11 @@
             <version>3.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>net.sf.trove4j</groupId>
-            <artifactId>trove4j</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.code.findbugs</groupId>-->
+            <!--<artifactId>jsr305</artifactId>-->
+            <!--<version>3.0.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -49,6 +43,12 @@
             <version>4.9</version>
             <scope>test</scope>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>net.sf.trove4j</groupId>-->
+            <!--<artifactId>trove4j</artifactId>-->
+            <!--<version>3.0.1</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
             <!--<groupId>com.google.guava</groupId>-->
