--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,67 @@
-*/test/*
-*.htm
-*.html
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+bin/
+build/
+target/
 *.jar
 *.war
 *.ear
 *.class
-/target/
-*/target
-*/target/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/bin
-/build
-/target
-
-/javax
-
-.idea
-.idea/
-/.idea/
-
-*.iml
-.iml
-*.iws
-*.ipr
-.idea_modules/
-atlassian-ide-plugin.xml
-com_crashlytics_export_strings.xml
-bin/**
-tmp/**
-tmp/**/*
 *.tmp
 *.bak
 *.swp
 *~.nib
+
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+
+*.iml
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
