--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.caibowen.prma</groupId>
-    <artifactId>prma</artifactId>
+    <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>core</module>
         <module>api</module>
         <module>logger</module>
         <module>monitor</module>
@@ -25,11 +24,11 @@
             <version>1.7.7</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-lang3</artifactId>-->
+            <!--<version>3.3</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
             <!--<groupId>com.google.code.findbugs</groupId>-->
@@ -44,11 +43,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>net.sf.trove4j</groupId>-->
-            <!--<artifactId>trove4j</artifactId>-->
-            <!--<version>3.0.1</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.1</version>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>com.google.guava</groupId>-->
