--- a/analyser/pom.xml
+++ b/analyser/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>analyser</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>../store</module>
+    </modules>
 
 
 </project>
