--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>net.sf.trove4j</groupId>
-            <artifactId>trove4j</artifactId>
-            <version>3.0.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>net.sf.trove4j</groupId>-->
+            <!--<artifactId>trove4j</artifactId>-->
+            <!--<version>3.0.1</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
             <!--<groupId>com.google.guava</groupId>-->
