--- a/store/pom.xml
+++ b/store/pom.xml
@@ -36,6 +36,13 @@
             <version>5.1.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP-java6</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
