fix bugs; add transaction support

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>parent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
