--- a/store/pom.xml
+++ b/store/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.caibowen</groupId>
