--- a/analyser/pom.xml
+++ b/analyser/pom.xml
@@ -4,27 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.caibowen.prma</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>core</artifactId>
+        <version>${prma-version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>analyser</artifactId>
     <packaging>pom</packaging>
-    <modules>
-        <module>../store</module>
-    </modules>
+    <version>${prma-version}</version>
 
     <dependencies>
         <dependency>
             <groupId>com.caibowen.prma</groupId>
-            <artifactId>parent</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>core</artifactId>
+            <version>${prma-version}</version>
         </dependency>
         <dependency>
             <groupId>com.caibowen.prma</groupId>
             <artifactId>store</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${prma-version}</version>
         </dependency>
     </dependencies>
 
