--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,19 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.caibowen.prma</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>core</artifactId>
+        <version>${prma-version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>api</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.caibowen.prma</groupId>
-            <artifactId>parent</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <!--<dependencies>-->
+        <!--<dependency>-->
+            <!--<groupId>com.caibowen.prma</groupId>-->
+            <!--<artifactId>core</artifactId>-->
+            <!--<version>${prma-version}</version>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
 
 </project>
