--- a/store/pom.xml
+++ b/store/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.caibowen.prma</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>core</artifactId>
+        <version>${prma-version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,31 +14,32 @@
     <dependencies>
         <dependency>
             <groupId>com.caibowen.prma</groupId>
-            <artifactId>parent</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>core</artifactId>
+            <version>${prma-version}</version>
         </dependency>
         <dependency>
             <groupId>com.caibowen.prma</groupId>
             <artifactId>api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${prma-version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.caibowen</groupId>
             <artifactId>gplume</artifactId>
-            <version>2.0</version>
+            <version>${gplume-version}</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.2</version>
+            <version>${logback-version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.33</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
