--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.caibowen.prma</groupId>
-        <artifactId>core</artifactId>
-        <version>${prma-version}</version>
+        <artifactId>parent</artifactId>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
