--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,14 @@
     </properties>
 
     <groupId>com.caibowen.prma</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>${prma-version}</version>
+    <version>0.1</version>
 
 
     <modules>
         <module>api</module>
+        <module>core</module>
         <module>store</module>
         <module>logger</module>
         <module>monitor</module>
