fix async appender wrapper bug

--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -23,7 +23,7 @@
             <version>${prma-version}</version>
         </dependency>
         <dependency>
-            <groupId>com.caibowen</groupId>
+            <groupId>com.caibowen.gplumeframework</groupId>
             <artifactId>gplume</artifactId>
             <version>${gplume-version}</version>
         </dependency>
