--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <junit-version>4.9</junit-version>
         <slf4j-version>1.7.7</slf4j-version>
         <logback-version>1.1.2</logback-version>
+        <protobuf-version>2.6.1</protobuf-version>
     </properties>
 
 
