add namespace to internal config; migrate to gplume 2.3

--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
+            <version>${javaxmail-version}</version>
             <optional>true</optional>
         </dependency>
 
