--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,12 @@
         <prma-version>0.1</prma-version>
         <jdk-version>1.7</jdk-version>
         <jvm-target>1.7</jvm-target>
-        <gplume-version>2.0</gplume-version>
+        <gplume-version>2.3</gplume-version>
         <junit-version>4.9</junit-version>
         <slf4j-version>1.7.7</slf4j-version>
         <logback-version>1.1.2</logback-version>
         <protobuf-version>2.6.1</protobuf-version>
+        <javaxmail-version>1.4.7</javaxmail-version>
     </properties>
 
 
