refactory; finish basic string filters; finish string cao

--- a/store/pom.xml
+++ b/store/pom.xml
@@ -17,7 +17,11 @@
             <artifactId>api</artifactId>
             <version>${prma-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>core</artifactId>
+            <version>${prma-version}</version>
+        </dependency>
         <dependency>
             <groupId>com.caibowen.gplumeframework</groupId>
             <artifactId>gplume</artifactId>
