--- a/store/pom.xml
+++ b/store/pom.xml
@@ -42,6 +42,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.15</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
