--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,6 +18,14 @@
             <version>${protobuf-version}</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
