--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,6 +26,20 @@
             <artifactId>gplume</artifactId>
             <version>${gplume-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
