--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,7 +13,6 @@
 
     <groupId>com.caibowen.prma</groupId>
     <artifactId>core</artifactId>
-    <version>${prma-version}</version>
 
     <dependencies>
         <dependency>
@@ -23,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>com.caibowen.gplumeframework</groupId>
-            <artifactId>gplume</artifactId>
-            <version>${gplume-version}</version>
+            <artifactId>gplume-scala</artifactId>
+            <version>${gp-scala-version}</version>
         </dependency>
 
         <dependency>
