--- a/store/pom.xml
+++ b/store/pom.xml
@@ -2,13 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <groupId>com.caibowen.prma</groupId>
         <artifactId>parent</artifactId>
         <version>0.1</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.caibowen.prma</groupId>
     <artifactId>store</artifactId>
 
     <dependencies>
@@ -24,8 +27,8 @@
         </dependency>
         <dependency>
             <groupId>com.caibowen.gplumeframework</groupId>
-            <artifactId>gplume</artifactId>
-            <version>${gplume-version}</version>
+            <artifactId>gplume-scala</artifactId>
+            <version>${gp-scala-version}</version>
         </dependency>
 
         <dependency>
