--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>api</artifactId>
             <version>${prma-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.caibowen.gplumeframework</groupId>
+            <artifactId>gplume-scala</artifactId>
+            <version>${gp-scala-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
