--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -22,6 +22,25 @@
             <artifactId>core</artifactId>
             <version>${prma-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.10</artifactId>
+            <version>${akka-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
