--- a/pom.xml
+++ b/pom.xml
@@ -40,27 +40,12 @@
         <java-version>1.7</java-version>
         <gp-scala-version>1.0</gp-scala-version>
         <junit-version>4.9</junit-version>
+        <akka-version>2.3.7</akka-version>
         <slf4j-version>1.7.7</slf4j-version>
         <logback-version>1.1.2</logback-version>
         <protobuf-version>2.6.1</protobuf-version>
         <javaxmail-version>1.4.7</javaxmail-version>
     </properties>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
 
     <reporting>
         <plugins>
