--- a/analyse/pom.xml
+++ b/analyse/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>api</artifactId>
         <groupId>com.caibowen.prma</groupId>
         <version>0.1</version>
+        <relativePath>../api/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>store</artifactId>
+    <artifactId>analyze</artifactId>
 
     <dependencies>
         <dependency>
@@ -22,30 +23,13 @@
             <artifactId>core</artifactId>
             <version>${prma-version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.caibowen.gplumeframework</groupId>
-            <artifactId>gplume-scala</artifactId>
-            <version>${gp-scala-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.33</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP-java6</artifactId>
-            <version>2.1.0</version>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-version}</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -57,6 +41,11 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.10</artifactId>
             <version>${akka-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.slick</groupId>
+            <artifactId>slick_2.10</artifactId>
+            <version>${slick-version}</version>
         </dependency>
 
     </dependencies>
