--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <gp-scala-version>1.0</gp-scala-version>
         <junit-version>4.9</junit-version>
         <akka-version>2.3.7</akka-version>
+        <slick-version>2.1.0</slick-version>
         <slf4j-version>1.7.7</slf4j-version>
         <logback-version>1.1.2</logback-version>
         <protobuf-version>2.6.1</protobuf-version>
