apply case calss to evaluator; add sample http notifier

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -41,6 +41,12 @@
             <version>${akka-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_2.10</artifactId>
+            <version>${lift-json-version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
