--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,10 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>api</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>../analyse</module>
-    </modules>
-
+    <packaging>jar</packaging>
 
 </project>
