--- a/core/pom.xml
+++ b/core/pom.xml
@@ -45,6 +45,12 @@
             <groupId>net.liftweb</groupId>
             <artifactId>lift-json_2.10</artifactId>
             <version>${lift-json-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
