--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <properties>
         <prma-version>0.1</prma-version>
         <java-version>1.7</java-version>
+        <scala-version>2.10.4</scala-version>
         <gp-scala-version>1.0</gp-scala-version>
         <gp-web-version>2.0</gp-web-version>
         <junit-version>4.9</junit-version>
@@ -52,22 +53,7 @@
         <javaxmail-version>1.4.7</javaxmail-version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.10.4</version>
-        </dependency>
-    </dependencies>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
 
     <build>
         <plugins>
@@ -87,9 +73,12 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
                 <executions>
                     <execution>
                         <goals>
@@ -98,6 +87,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <sourceDir>src/main/scala</sourceDir>
+                </configuration>
             </plugin>
         </plugins>
     </build>
