--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.10.4</version>
+            <version>${scala-version}</version>
         </dependency>
     </dependencies>
 
@@ -94,6 +94,7 @@
                             <goal>compile</goal>
                             <goal>testCompile</goal>
                         </goals>
+                        <phase>process-resources</phase>
                     </execution>
                 </executions>
                 <configuration>
