--- a/webface/pom.xml
+++ b/webface/pom.xml
@@ -10,26 +10,47 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webface</artifactId>
-
+    <packaging>war</packaging>
 
     <dependencies>
-    <dependency>
-        <groupId>com.caibowen.prma</groupId>
-        <artifactId>api</artifactId>
-        <version>${prma-version}</version>
-    </dependency>
-    <dependency>
-        <groupId>com.caibowen.prma</groupId>
-        <artifactId>core</artifactId>
-        <version>${prma-version}</version>
-    </dependency>
-
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>core</artifactId>
+            <version>${prma-version}</version>
+        </dependency>
         <dependency>
             <groupId>com.caibowen.gplumeframework</groupId>
             <artifactId>gplume-web</artifactId>
             <version>${gp-web-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>logger</artifactId>
+            <version>0.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.scala-tools</groupId>-->
+                <!--<artifactId>maven-scala-plugin</artifactId>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>compile</goal>-->
+                            <!--<goal>testCompile</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>process-resources</phase>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<sourceDir>src/main/scala</sourceDir>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
 
 </project>
