--- a/webface/pom.xml
+++ b/webface/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webface</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -95,6 +95,7 @@
                 </executions>
                 <configuration>
                     <sourceDir>src/main/scala</sourceDir>
+                    <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
                 </configuration>
             </plugin>
             <plugin>
