--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,12 @@
         </dependency>
 
         <dependency>
+            <groupId>gplume.scala</groupId>
+            <artifactId>http</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
