--- a/webface/pom.xml
+++ b/webface/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>webface</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -40,6 +40,12 @@
             <artifactId>logger</artifactId>
             <version>0.1</version>
             <!--<scope>test</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>gplume.scala</groupId>
+            <artifactId>jdbc</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
